[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithms_in_python"

description = "My package description"
readme = "README.md"
requires-python = ">=3.10"

license = {text = "BSD-3-Clause"}
classifiers = [    
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10.11"',
]
dynamic = ["version"]

